fix container size on mobile

--- a/app/assets/stylesheets/Shared/Layout.scss
+++ b/app/assets/stylesheets/Shared/Layout.scss
@@ -1,5 +1,7 @@
 .Layout {
-  flex: 1;
-  display: flex;
-  position: relative;
+  @include desktop {
+    flex: 1;
+    display: flex;
+    position: relative;
+  }
 }
