--- a/app/assets/stylesheets/Shared/Phone.scss
+++ b/app/assets/stylesheets/Shared/Phone.scss
@@ -1,7 +1,6 @@
 .Phone {
-  flex: 1;
-
   @include desktop {
+    flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -14,12 +13,6 @@
       border-radius: $radius-chat;
       background-color: $white;
       overflow-x: hidden;
-    }
-
-    @include mobile {
-      position: absolute;
-      width: 100%;
-      height: 100%;
     }
   }
 
